--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+.DS_Store
 Thumbs.db
 /build
 /Deployment/shader.frag
 /Deployment/shader.vert
+/Deployment/painter-colored.frag
+/Deployment/painter-colored.vert
+/Deployment/painter-image.frag
+/Deployment/painter-image.vert
+/Deployment/painter-text.frag
+/Deployment/painter-text.vert
+/Deployment/painter-video.frag
+/Deployment/painter-video.vert
